# FastBackup

./: .bumpversion.cfg  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml
.github/workflows/: buildx-docker-image.yml  linters.yml
proto/: backup.proto  google_drive.proto
src/: db.rs  lib.rs  main.rs  server.rs
