[package]
name = "backuper"
version = "0.1.0"
edition = "2021"
authors = ["Kirill <k@kunansy.ru>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.10.0"
chrono = "0.4"
thiserror = "1.0"
google-drive3 = "5.0"
async-trait = "0.1"
tokio = { version = "1.28", features = ["full"] }
tonic = "0.9"
prost = "0.11"
signal-hook = "0.3"
once_cell = "1.18"

[build-dependencies]
tonic-build = "0.9"

[[bin]]
name = "app"
path = "src/main.rs"

[[bin]] # Bin to run the GoogleDrive gRPC server
name = "backup-server"
path = "src/server.rs"