[package]
name = "backuper"
version = "0.1.0"
edition = "2021"
authors = ["Kirill <k@kunansy.ru>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.10.0"
chrono = "0.4"
thiserror = "1.0"
google-drive3 = "5.0"
async-trait = "0.1"
tokio = { version = "1.28", features = ["full"] }
tonic = "0.9"
prost = "0.11"
signal-hook = "0.3"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "uuid", "postgres", "chrono", "json" ]}
serde_json = "1.0"
serde = "1.0"
zstd = "0.12"

[build-dependencies]
tonic-build = "0.9"

[profile.release]
# fat lto: https://doc.rust-lang.org/cargo/reference/profiles.html#lto
lto = true

[[bin]]
name = "app"
path = "src/main.rs"

[[bin]] # Bin to run the GoogleDrive gRPC server
name = "backup-server"
path = "src/server.rs"