[package]
name = "backuper"
version = "0.1.0"
edition = "2021"
authors = ["Kirill <k@kunansy.ru>"]

[dependencies]
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
thiserror = "1.0"
google-drive3 = "5.0"
async-trait = "0.1"
tokio = { version = "1.36", features = ["full"] }
tonic = "0.10"
prost = "0.12"
signal-hook = "0.3"
sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "uuid", "postgres", "chrono", "json" ]}
serde_json = "1"
serde = "1"
zstd = "0.13"
bytes = "1"

[build-dependencies]
tonic-build = "0.10"

[profile.release]
# fat lto: https://doc.rust-lang.org/cargo/reference/profiles.html#lto
lto = "fat"
opt-level = 3

[[bin]]
name = "app"
path = "src/main.rs"

[[bin]] # Bin to run the GoogleDrive gRPC server
name = "backup-server"
path = "src/server.rs"
